# agentic-dev-boilerplate

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  dev-config.toml  docker-compose.yml  generate_boilerplate.py  github-copilot-for-vsc.documentation.md  project-schema.yaml  pyproject.toml  requirements.txt  setup.sh  test-bootdisk-schema.yaml  test-package.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: ai-engineer.agent.md  api-developer.agent.md  backend-developer.agent.md  base.agent.md  data-scientist.agent.md  debugger.agent.md  deployer.agent.md  devops-specialist.agent.md  frontend-developer.agent.md  fullstack-developer.agent.md  ml-engineer.agent.md  mobile-developer.agent.md  orchestrator.agent.md  planner.agent.md  project-manager.agent.md  security.agent.md  software-engineer.agent.md  systems-engineer.agent.md  tester.agent.md
.github/guardrails/: package-baseline.toml
.github/instructions/: apis.md  backend-developer.instructions.md  data-scientist.instructions.md  debugger.instructions.md  deployer.instructions.md  frontend-developer.instructions.md  fullstack-developer.instructions.md  ml-engineer.instructions.md  mobile-developer.instructions.md  orchestrator.instructions.md  planner.instructions.md  python-agents.instructions.md  python-agents.md  rust-agents.md  systems-engineer.instructions.md  tester.instructions.md
.github/prompts/: create-agent-testing-framework.prompt.md  design-agent-architecture.prompt.md  implement-api-security.prompt.md
.github/scripts/: pr_enrichment.py  validate_pr_tasks.py
.github/workflows/: agent-coordination.yml  ci-cd.yml  pr-automation.yml  release.yml
demo-output/: README.md  pyproject.toml
demo-output/.github/instructions/: ai-engineer.instructions.md  debugger.instructions.md  deployer.instructions.md  devops-specialist.instructions.md  planner.instructions.md  software-engineer.instructions.md  tester.instructions.md
demo-output/.github/workflows/: agent-coordination.yml  ci-cd.yml
demo-output/scripts/: multi_agent_solver.py  setup_uv.py
docs/: LONG_TERM_MEMORY.md  api.md  contributing.md  demo-validation.md  development-setup.md  user-guide.md
scripts/: git_setup.py  multi_agent_solver.py
src/agentic_dev_boilerplate/: __init__.py  fuzz_test.py  generate_boilerplate.py  git_setup.py  multi_agent_solver.py  setup_uv.py  tmp_manager.py  tmp_manager.py.backup
src/agentic_dev_boilerplate/install_arch/: __init__.py  cli.py  config.py  filesystem.py  guardrails.py  package_manager.py
src/agentic_dev_boilerplate/templates/: README.md.j2  agent_ai_engineer_instructions.md.j2  agent_base_instructions.md.j2  agent_debugger_instructions.md.j2  agent_deployer_instructions.md.j2  agent_devops_specialist_instructions.md.j2  agent_planner_instructions.md.j2  agent_software_engineer_instructions.md.j2  agent_systems_engineer_instructions.md.j2  requirements.txt.j2  workflow_agent_coordination.yml.j2  workflow_ci_cd.yml.j2  workflow_ci_cd.yml.j2.backup  workflow_pr_automation.yml.j2
templates/: LICENSE.j2  README.md.j2  agent_base_instructions.md.j2  agent_debugger_instructions.md.j2  agent_deployer_instructions.md.j2  agent_orchestrator_instructions.md.j2  agent_planner_instructions.md.j2  agent_security_instructions.md.j2  agent_software_engineer_instructions.md.j2  agent_tester_instructions.md.j2  pyproject.toml.j2  requirements.txt.j2  script_git_setup.py.j2  workflow_agent_coordination.yml.j2  workflow_ci_cd.yml.j2  workflow_ci_cd.yml.j2.backup  workflow_pr_automation.yml.j2
templates/bootdisk-agentic-structure/: README.md.j2  agent_test_engineer_instructions.md.j2  main.py.j2  pyproject.toml.j2  script_multi_agent_solver.py.j2  script_setup_uv.py.j2  workflow_ci_cd.yml.j2
templates/bootdisk-agentic-structure/.devcontainer/: Dockerfile.j2  devcontainer.json.j2
templates/bootdisk-agentic-structure/.github/copilot-instructions/: global.md.j2
templates/bootdisk-agentic-structure/agents/: __init__.py.j2
templates/bootdisk-agentic-structure/agents/core/: manager.py.j2  workflows.py.j2
templates/bootdisk-agentic-structure/agents/roles/: __init__.py.j2  swe.py.j2
templates/bootdisk-agentic-structure/config/: project.yaml.j2
templates/bootdisk-agentic-structure/scripts/: devcontainer-manager.sh.j2
templates/bootdisk-agentic-structure/src/{{ project_slug }}/: __init__.py.j2  cli.py.j2
test-output/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
test-output/.github/instructions/: devops-specialist.instructions.md  planner.instructions.md  swe.instructions.md  systems-engineer.instructions.md  test_engineer.instructions.md  tester.instructions.md
test-output/.github/workflows/: agent-coordination.yml
test-output/scripts/: git_setup.py  setup_uv.py
test-output/tasking/: tracker.yaml
tests/: test_fuzzing.py  test_generate_boilerplate.py  test_integration.py  test_tmp_manager.py
