[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-bootdisk-project"
version = "1.0.0"
description = "Test project using bootdisk agentic structure"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["python", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",


    "Programming Language :: Python :: 3.12",




    "Topic :: Software Development",
]

dependencies = [










]

[project.optional-dependencies]
dev = [









]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/test/test-bootdisk-project"
Repository = "https://github.com/test/test-bootdisk-project"

Changelog = "https://github.com/test/test-bootdisk-project/blob/main/CHANGELOG.md"


Contributing = "https://github.com/test/test-bootdisk-project/blob/main/CONTRIBUTING.md"


[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["test-bootdisk-project"]
skip = ["__init__.py"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["test-bootdisk-project"]
omit = [
    "tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
